--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
   }
 }
 </script>
+<link rel="stylesheet" href="/index.css">
 </head>
   <body class="bg-[#0d0d0d] text-[#b9f2ff]">
     <div id="root"></div>
